# cadet

./: .gitignore  LICENSE  Makefile  README.md  cadet.c  cadet.cabal  main.c  stack.yaml  usb.c  usb.h
app/: Main.hs
src/: Lib.hs
