name:                cadet
version:             0.1.0
synopsis:            Keyboard controller
description:         Written in Ivory, an eDSL for safe systems programming.
homepage:            https://github.com/limeburst/cadet#readme
license:             MIT
license-file:        LICENSE
author:              Jihyeok Seo
maintainer:          me@limeburst.net
copyright:           Copyright (c) 2016 Jihyeok Seo
category:            Embedded
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , ivory
                     , ivory-backend-c
  default-language:    Haskell2010

executable cadet
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cadet
                     , ivory
                     , ivory-backend-c
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/limeburst/cadet
